removed portfolio and contact

--- a/_data/company.yml
+++ b/_data/company.yml
@@ -1,6 +1,6 @@
-title: Azi Apps
-description: Bringing the best mobile experiences for you and your clients.
-contact_email_address: contact@azi.app
+title: Lior Azi
+description: Your expert in the mobile world.
+contact_email_address: lior.azi@gmail.com
 contact_phone_number:
 address:
-postal_address: 
+postal_address:
