--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -2,12 +2,12 @@
   links:
     - name: Home
       link: /
-    - name: Portfolio
-      link: /portfolio/
+    # - name: Portfolio
+    #   link: /portfolio/
     - name: Blog
       link: /blog/
-    - name: Contact
-      link: /contact/
+    # - name: Contact
+    #   link: /contact/
 - title: Social
   links:
     - name: Twitter
